--- a/package.json
+++ b/package.json
@@ -80,12 +80,12 @@
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "@tailwindcss/typography": "^0.5.15"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
-    "@tailwindcss/typography": "^0.5.15",
     "@types/connect-mongo": "^3.0.0",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
